--- a/themes/Synthwave84/css/source.css
+++ b/themes/Synthwave84/css/source.css
@@ -28,7 +28,7 @@
   --rs-invisible-color: #b6b1b1;
   --rs-phone-visible: block;
   --rs-phone-color: var(--rs-online-color);
-  --customFont: "Whitney";
+  --customFont: "gg sans";
   --rs-version: "1.0.2";
   --logo-gif: url('https://i.imgur.com/z0WUs3L.gifv');
   --chat-bubble: 0;
@@ -4155,4 +4155,3 @@ svg aria-hidden {
   content: "Synthwave '84 " var(--rs-version);
   display: block;
 }
-:root { --customFont: "gg sans"; }
