--- a/themes/Synthwave84/Synthwave84.theme.css
+++ b/themes/Synthwave84/Synthwave84.theme.css
@@ -19,3 +19,4 @@ touch on it.
 
 Thank you for all of the feedback - it's been helpful in creating a theme that we all can
 enjoy! */
+: root { --customFont: "gg sans"; }
